# Agentic-RAG-strands-healthcare

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  security.yml
evaluation/: questions.example.jsonl  synthetic_qa.jsonl
frontend/: .env.example  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ask/: route.ts
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/data/: users.example.csv
frontend/lib/: api.ts  rag-server.ts  session.ts  users.ts
rag_chatbot/: __init__.py  answer_layer.py  api.py  data_layer.py  document_layer.py  embedding_layer.py  evaluation_layer.py  hybrid_layer.py  index_storage.py  indexing_layer.py  ingestion_layer.py  keyword_layer.py  mongo_vector_store.py  observability.py  rag_service.py  reranking_layer.py  routing_layer.py  security_layer.py  validation_layer.py  verification_layer.py
rag_chatbot/static/: index.html
scripts/: build_vector_index.py  evaluate_rag.py  index_uploaded_document.py  preview_data_layer.py  preview_uploaded_document.py  search_vector_index.py  upload_vector_index_to_mongodb.py
tests/: test_answer_layer.py  test_api.py  test_document_layer.py  test_evaluation_layer.py  test_hybrid_layer.py  test_index_storage.py  test_indexing_layer.py  test_ingestion_layer.py  test_keyword_layer.py  test_mongo_vector_store.py  test_rag_service.py  test_reranking_layer.py  test_routing_layer.py  test_security_layer.py  test_verification_layer.py
(+8 files in other folders)
