[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Layered RAG chatbot over hospital accreditation documents."
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=1.11.0",
    "transformers>=4.41.0,<6.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["rag_chatbot*"]
